--- a/Content/styles.css
+++ b/Content/styles.css
@@ -9,11 +9,15 @@
 }
 
 .deputy {
-  height: 20px;
-  width: 20px;
+  height: 15px;
+  width: 15px;
   border-radius: 10px;
   margin:5px;
   opacity: 1;
+}
+
+.deputy.deputy-arch {
+  position:absolute;
 }
 
 .deputy:hover {
