support of images and escaoe button

--- a/Content/styles.css
+++ b/Content/styles.css
@@ -84,19 +84,25 @@
 
 
 #info-window .modal-dialog {
-  width: 400px;
+  margin-left: 10%;
+  width: 480px;
 }
 
 #info-window .avatar {
-  width: 48px;
-  height:48px;
+  width: 120px;
+  height: 120px;
   border: 1px solid black;
   float: left;
   margin: 10px;
 }
 
+#info-window .avatar img{
+  width: 100%;
+  height:100%;
+}
+
 #info-window .header-info {
-  margin-left: 90px;
+  margin-left: 160px;
   margin-top: 10px;
 }
 
