--- a/Sources/views/camara_arch.jade
+++ b/Sources/views/camara_arch.jade
@@ -7,12 +7,13 @@
     -var d = deputies[i];
     .deputy.deputy-arch(class="#{d.partido}" data-index="#{i}" style="left: #{dict[i].left}; top: #{dict[i].top}")
 
-#info-window.modal.fade(role="dialog")
+#info-window.modal.fade(role="dialog" tabindex="-1")
   .modal-dialog
     .modal-content
       .modal-header
         button.close(type="button" data-dismiss="modal") &times
         .avatar
+          img
         .header-info
           p Nombre: 
             span.name
