--- a/Sources/views/camara_arch.jade
+++ b/Sources/views/camara_arch.jade
@@ -20,9 +20,6 @@
           p Partido: 
             span.party
       .modal-body
-        table
-          tr
-            td Voto
-            td A favor
+        //table_votes.jade will be added here
       .modal-footer
          button.btn.btn-default(type="button" data-dismiss="modal") Cerrar
