--- a/Content/styles.css
+++ b/Content/styles.css
@@ -1,4 +1,16 @@
+html {
+  width: 100%;
+  height: 100%;
+}
+
+body {
+  width: 100%;
+  height: 100%;
+}
+
 .my-container {
+  width: 100%;
+  height: 100%;
 }
 
 .chamber {
@@ -6,6 +18,12 @@
   width: 602px;
   border: 1px solid black;
   margin: 0 auto;
+}
+
+.chamber-arch {
+  width: 100%;
+  height: 100%;
+  background-color: #1b1e27;
 }
 
 .deputy {
@@ -222,4 +240,26 @@
 
 #info-window table.vote-table td.vote.novoto {
   background-color: #808080;
+}
+
+.chart {
+  position:absolute;
+  top: 300px;
+  left: -50px;
+}
+
+.chart text {
+  fill: white;
+  font: 10px sans-serif;
+  text-anchor: end;
+}
+
+.chart text.label {
+  fill: white;
+  font: 14px sans-serif;
+  text-anchor: end;
+}
+
+.chart g[transform="translate(472,5)"] {
+  display:none;
 }
