--- a/Content/styles.css
+++ b/Content/styles.css
@@ -6,11 +6,14 @@ html {
 body {
   width: 100%;
   height: 100%;
+      background-color: #1b1e27;
 }
 
 .my-container {
-  width: 100%;
-  height: 100%;
+width: 400px;
+    height: 200px;
+    position: relative;
+    margin: 0 auto;
 }
 
 .chamber {
@@ -243,9 +246,12 @@ body {
 }
 
 .chart {
-  position:absolute;
-  top: 300px;
-  left: -50px;
+    position: relative;
+    /* top: 300px; */
+    /* left: -50px; */
+    margin: 0 auto;
+    width: 500px;
+    display: block;
 }
 
 .chart text {
@@ -262,4 +268,21 @@ body {
 
 .chart g[transform="translate(472,5)"] {
   display:none;
+}
+
+.cabeza {
+  width: 1280px;
+  height: 500px;
+  margin: 0 auto;
+  background-image: url("../assets/img.png");
+  background-size: 100%;
+  background-position: center center;
+  background-repeat: no-repeat;
+}
+
+.content-data {
+  width: 1280px;
+  margin: 0 auto;
+  text-align: center;
+  color: white;
 }
